@startuml
'Generated by Modeler - do not change.

entity "Employee" {
    FirstName: Text
    Gender: Gender
    LastName: Text
    ResidentialAddress: Address
}

entity "Manager" {
    ManagesFromDate: Date
}

entity "Organization_Unit" {
    Address: Address
    Name: Text
}

enum "Gender" {
    Female
    Male
}

class "Address" {
    ApartmentNumber: Text
    City: Text
    Country: Text
    HouseNumber: Text
    Street: Text
}

"Employee" "0..*" --> "1" "Organization_Unit" : "works_in / hires" 
"Manager" --|> "Employee" 
"Manager" "1" --> "1" "Organization_Unit" : "manages / is_managed_by" 

@enduml

